[gd_scene load_steps=10 format=2]

[ext_resource path="res://default.theme" type="Theme" id=1]
[ext_resource path="res://elements/control_backing.tres" type="StyleBox" id=2]
[ext_resource path="res://elements/MusicBar.gd" type="Script" id=3]
[ext_resource path="res://elements/control_popout.tres" type="StyleBox" id=4]
[ext_resource path="res://Img/media-skip-backward-symbolic.svg" type="Texture2D" id=5]
[ext_resource path="res://Img/media-playback-start-symbolic.svg" type="Texture2D" id=6]
[ext_resource path="res://Img/media-skip-forward-symbolic.svg" type="Texture2D" id=7]
[ext_resource path="res://icon.png" type="Texture2D" id=8]
[ext_resource path="res://elements/bandaid.tres" type="StyleBox" id=9]

[node name="MusicBar" type="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -80.2959
offset_right = 4.0
offset_bottom = 1.7041
custom_minimum_size = Vector2( 0, 76 )
theme = ExtResource( 1 )
theme_override_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerControls" type="Panel" parent="."]
anchor_left = 0.809623
anchor_top = -0.515614
anchor_right = 1.00575
anchor_bottom = 0.996581
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerControls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -42.4548
offset_right = 76.0
offset_bottom = 5.54517
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 0, 28 )
theme_override_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="lasttrack" type="TextureButton" parent="PlayerControls/HBoxContainer"]
offset_right = 32.0
offset_bottom = 48.0
custom_minimum_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="play" type="TextureButton" parent="PlayerControls/HBoxContainer"]
offset_left = 52.0
offset_right = 100.0
offset_bottom = 48.0
custom_minimum_size = Vector2( 48, 48 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="nexttrack" type="TextureButton" parent="PlayerControls/HBoxContainer"]
offset_left = 120.0
offset_right = 152.0
offset_bottom = 48.0
custom_minimum_size = Vector2( 32, 32 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Panel" type="Panel" parent="PlayerControls"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -14.0
offset_right = 12.0
offset_bottom = 57.0
theme_override_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStatus" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -35.0
offset_right = 693.0
offset_bottom = 36.0
theme_override_styles/panel = ExtResource( 2 )

[node name="playing" type="TextureRect" parent="PlayerStatus"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.7675
offset_top = -35.6088
offset_right = 78.7671
offset_bottom = 24.3913
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="title" type="Label" parent="PlayerStatus/playing"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 71.0
offset_top = -21.0001
offset_right = 469.0
offset_bottom = 2.99995
custom_minimum_size = Vector2( 305, 14 )
text = "No Track Selected"
autowrap = true
max_lines_visible = 2

[node name="artist" type="Label" parent="PlayerStatus/playing"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 450.0
offset_top = -14.0
offset_right = 663.0
offset_bottom = 10.0
custom_minimum_size = Vector2( 213, 14 )
text = "No Artist"
clip_text = true

[node name="songProgress" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.339
offset_top = -3.22791
offset_right = -73.3389
offset_bottom = 20.7721

[node name="title" type="Label" parent="songProgress"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -62.9403
offset_top = -13.0
offset_right = 5.05969
offset_bottom = 11.0
text = "Time:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Label" parent="songProgress"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -9.60876
offset_right = 56.0
offset_bottom = 14.3912
text = "0.00"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wait" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -264.446
offset_top = -4.27075
offset_right = -88.446
offset_bottom = 19.7293
text = "Please Wait..."
uppercase = true
[connection signal="playing" from="." to="." method="_on_MusicBar_playing"]
[connection signal="playlist_loaded" from="." to="." method="_on_MusicBar_playlist_loaded"]
[connection signal="playposition" from="." to="." method="_on_MusicBar_playposition"]
[connection signal="songlength" from="." to="." method="_on_MusicBar_songlength"]
[connection signal="timeleft" from="." to="." method="_on_MusicBar_timeleft"]
[connection signal="trackart" from="." to="." method="_on_MusicBar_trackart"]
[connection signal="trackartist" from="." to="." method="_on_MusicBar_trackartist"]
[connection signal="tracktitle" from="." to="." method="_on_MusicBar_tracktitle"]
[connection signal="wait" from="." to="." method="_on_MusicBar_wait"]
[connection signal="pressed" from="PlayerControls/HBoxContainer/lasttrack" to="." method="_on_lasttrack_pressed"]
[connection signal="pressed" from="PlayerControls/HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PlayerControls/HBoxContainer/nexttrack" to="." method="_on_nexttrack_pressed"]
